@@ -13,7 +13,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -25,7 +24,7 @@ import net.sourceforge.pmd.internal.util.IOUtil;
 class FileCollectorZipTest {
 
     private static final String ZIP_PATH = "src/test/resources/net/sourceforge/pmd/lang/document/filecollectorziptest/zipWithSources.zip";
-    private final Path zipPath = Paths.get(ZIP_PATH);
+    private final Path zipPath = Path.of(ZIP_PATH);
 
     @Test
     void testZipFile() {
@@ -36,7 +35,7 @@ class FileCollectorZipTest {
         try (PmdAnalysis pmd = PmdAnalysis.create(conf)) {
             List<TextFile> files = pmd.files().getCollectedFiles();
             assertThat(files, hasSize(3));
-            assertHasName(files.get(0), reportPath + "!/otherSrc/somefile.dummy", pmd);
+            assertHasName(files.getFirst(), reportPath + "!/otherSrc/somefile.dummy", pmd);
             assertHasName(files.get(1), reportPath + "!/src/somefile.dummy", pmd);
             assertHasName(files.get(2), reportPath + "!/src/somefile1.dummy", pmd);
         }
@@ -50,7 +49,7 @@ class FileCollectorZipTest {
             pmd.files().addZipFileWithContent(zipPath);
             List<TextFile> files = pmd.files().getCollectedFiles();
             assertThat(files, hasSize(3));
-            assertThat(files.get(0).getFileId().getUriString(),
+            assertThat(files.getFirst().getFileId().getUriString(),
                        equalTo("jar:" + zipPath.toUri() + "!/otherSrc/somefile.dummy"));
 
         }
@@ -61,12 +60,12 @@ class FileCollectorZipTest {
     void testZipFileRelativizeWith() {
         PMDConfiguration conf = new PMDConfiguration();
         conf.addInputPath(zipPath);
-        conf.addRelativizeRoot(Paths.get("src/test/resources"));
+        conf.addRelativizeRoot(Path.of("src/test/resources"));
         try (PmdAnalysis pmd = PmdAnalysis.create(conf)) {
             List<TextFile> files = pmd.files().getCollectedFiles();
             assertThat(files, hasSize(3));
             String baseZipPath = IOUtil.normalizePath("net/sourceforge/pmd/lang/document/filecollectorziptest/zipWithSources.zip");
-            assertHasName(files.get(0), baseZipPath + "!/otherSrc/somefile.dummy", pmd);
+            assertHasName(files.getFirst(), baseZipPath + "!/otherSrc/somefile.dummy", pmd);
             assertHasName(files.get(1), baseZipPath + "!/src/somefile.dummy", pmd);
             assertHasName(files.get(2), baseZipPath + "!/src/somefile1.dummy", pmd);
         }
@@ -82,10 +81,10 @@ class FileCollectorZipTest {
         try (PmdAnalysis pmd = PmdAnalysis.create(conf)) {
             List<TextFile> files = pmd.files().getCollectedFiles();
             assertThat(files, hasSize(3));
-            assertEquals("/otherSrc/somefile.dummy", files.get(0).getFileId().getAbsolutePath());
+            assertEquals("/otherSrc/somefile.dummy", files.getFirst().getFileId().getAbsolutePath());
             URI zipUri = zipPath.toUri();
-            assertEquals("jar:" + zipUri + "!/otherSrc/somefile.dummy", files.get(0).getFileId().getUriString());
-            assertHasName(files.get(0), reportPath + "!/otherSrc/somefile.dummy", pmd);
+            assertEquals("jar:" + zipUri + "!/otherSrc/somefile.dummy", files.getFirst().getFileId().getUriString());
+            assertHasName(files.getFirst(), reportPath + "!/otherSrc/somefile.dummy", pmd);
             assertHasName(files.get(1), reportPath + "!/src/somefile.dummy", pmd);
             assertHasName(files.get(2), reportPath + "!/src/somefile1.dummy", pmd);
         }
