@@ -18,14 +18,14 @@ class ASTBooleanLiteralTest extends BaseParserTest {
     @Test
     void testTrue() {
         List<ASTBooleanLiteral> ops = java.getNodes(ASTBooleanLiteral.class, TEST1);
-        ASTBooleanLiteral b = ops.get(0);
+        ASTBooleanLiteral b = ops.getFirst();
         assertTrue(b.isTrue());
     }
 
     @Test
     void testFalse() {
         List<ASTBooleanLiteral> ops = java.getNodes(ASTBooleanLiteral.class, TEST2);
-        ASTBooleanLiteral b = ops.get(0);
+        ASTBooleanLiteral b = ops.getFirst();
         assertFalse(b.isTrue());
     }
 
